--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2 class="text-center">A propos</h2>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/person.webp" class="imageAboutPage" alt="">
+                    <img src="images/person.webp" class="imageAboutPage" alt="Portrait">
                 </div>
 
                 <div class="col-lg-8">
