--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Portfolio Name</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="width=device-width, initial-scale=1">
     <!-- linking css file -->
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap CDN -->
@@ -129,17 +129,17 @@
             <div class="row">
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-solid fa-phone fa-4x"></i>
-                    <h4>Téléphone</h4>
+                    <h3>Téléphone</h3>
                     <p>06-06-06-06-06</p>
                 </div>
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-regular fa-envelope fa-4x"></i>
-                    <h4>Adresse email</h4>
+                    <h3>Adresse email</h3>
                     <p>prénom.nom@gmail.com</p>
                 </div>
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-brands fa-linkedin-in fa-4x"></i>
-                    <h4>LinkedIn</h4>
+                    <h3>LinkedIn</h3>
                     <p>LinkedIn Name</p>
                 </div>
             </div>
