ajout meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>Portfolio Name</title>
     <meta charset="utf-8">
-    <meta name="description" content="width=device-width, initial-scale=1">
+    <meta name="description" content="portefolio Alyson Laville">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- linking css file -->
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap CDN -->
