--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="portefolio Alyson Laville">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- linking css file -->
-    <link rel="stylesheet" href="style.css">
+    
     <!-- bootstrap CDN -->
     <link
     rel="stylesheet"
@@ -16,6 +15,8 @@
   />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" async>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- linking css file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h1 class="hero_title">Salut, moi c'est name</h1>
-                    <p class="hero_desc">Je suis développeur web junior</p>
+                    <h2 class="hero_desc">Je suis développeur web junior</h2>
                 </div>
             </div>
         </div>
