--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <a class="navbar-brand" href="#">Name</a>
+            <a class="navbar-brand" href="#">Alyson Laville</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -57,8 +57,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h1 class="hero_title">Salut, moi c'est name</h1>
-                    <h2 class="hero_desc">Je suis développeur web junior</h2>
+                    <h1 class="hero_title">Salut, moi c'est Alyson Laville</h1>
+                    <h2 class="hero_desc">Je suis Testeuse Logiciel</h2>
                 </div>
             </div>
         </div>
@@ -70,44 +70,22 @@
             <h2 class="text-center">A propos</h2>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/person.webp" class="imageAboutPage" alt="Portrait">
+                    <img src="images/profil-picture.jpg" class="imageAboutPage" alt="Portrait">
                 </div>
 
                 <div class="col-lg-8">
-                    <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it to make a type specimen book. It has survived not
-                        only five centuries, but also the leap into electronic typesetting, remaining essentially
-                        unchanged
-
+                    <div class="row mt-3">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>Nom: Alyson Laville</li>
+                                <li>Age: 29 ans</li>
+                                <li>Ville: Bordeaux</li>
+                            </ul>
+                        </div>
+                    <p> À 29 ans, j’ai effectué une reconversion professionnelle dans le test logiciel via une formation certifiante OpenClassrooms. Diplômée en développement web, je me suis spécialisée dans l’automatisation des tests et la qualité logicielle. Mon alternance de 18 mois m’a permis d’acquérir une solide expérience terrain en tant que testeur logiciel. Grâce à mes compétences en développement, j’adopte une approche globale de la qualité. Curieuse, rigoureuse et passionnée, je suis prête à relever de nouveaux défis pour garantir des applications fiables et performantes.
                     </p>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <ul>
-                                <li>Nom: Prénom nom</li>
-                                <li>Age: 42</li>
-                                <li>xxx: xxx xxx</li>
-
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <ul>
-                                <li>Nom: Prénom nom</li>
-                                <li>Age: 42</li>
-                                <li>xxx: xxx xxx</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                            unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-                            survived not only five centuries, but also the leap into electronic typesetting, remaining
-                            essentially unchanged.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                            unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-                            survived not only five centuries, but also the leap into electronic typesetting, remaining
-                            essentially unchanged.
-                        </p>
-                    </div>
+                    
+                    
                 </div>
             </div>
     </section>
@@ -123,6 +101,7 @@
     <section id="portfolio">
         <div class="container mt-3">
             <h2 class="text-center">Mes projets</h2>
+            <div class="row" id="projectRow"></div>
     </section>
 
     <!-- contact section-->
@@ -133,17 +112,22 @@
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-solid fa-phone fa-4x"></i>
                     <h3>Téléphone</h3>
-                    <p>06-06-06-06-06</p>
+                    <a href="tel:+33642614975">06 42 61 49 75</a>
                 </div>
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-regular fa-envelope fa-4x"></i>
                     <h3>Adresse email</h3>
-                    <p>prénom.nom@gmail.com</p>
+                    <a href="mailto:alyson.alville@gmail.com">alyson.alville&#64;gmail.com</a>
                 </div>
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-brands fa-linkedin-in fa-4x"></i>
                     <h3>LinkedIn</h3>
-                    <p>LinkedIn Name</p>
+                    <a
+        href="https://www.linkedin.com/in/alysonlaville/"
+        target="_blank"
+        rel="noreferrer"
+        >Alyson Laville</a
+      >
                 </div>
             </div>
         </div>
