passage image format webp

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 class="text-center">A propos</h2>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/profil-picture.jpg" class="imageAboutPage" alt="Portrait">
+                    <img src="images/profil-picture.webp" class="imageAboutPage" alt="Portrait">
                 </div>
 
                 <div class="col-lg-8">
