--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Portfolio Name</title>
+    <title>Portfolio Alyson Laville</title>
     <meta charset="utf-8">
     <meta name="description" content="portefolio Alyson Laville">
     <meta name="viewport" content="width=device-width, initial-scale=1">
